feat: CQRS impl